Fixed logo image alignment.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,7 +33,8 @@ header{
 }
 
 .logo{
-    width: 70%;
+  width: 70%;
+  text-align: left;
 }
 
 .logo img{
